Inclusao do struct para as strings

--- a/Movie/Base.lproj/Main.storyboard
+++ b/Movie/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Page View Controller-->
         <scene sceneID="s9J-WR-JME">
             <objects>
-                <pageViewController storyboardIdentifier="Page" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ZVP-4C-ha1" customClass="PageViewController" customModule="Movie" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ZVP-4C-ha1" customClass="PageViewController" customModule="Movie" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fSf-oL-hq6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="46" y="81"/>
